# pulsar

./: .env.example  .gitignore  COMMIT_MESSAGE.txt  Cargo.toml  GET_ORDERBOOK_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  METRICS_ARCHITECTURE.md  METRICS_TESTING_GUIDE.md  README.md  STAKING_CONTRACT.md  oracle_contract.rs  package-lock.json  package.json  run_orderbook_tests.sh  setup-issue-194.sh  tsconfig.json  vitest.config.ts
contracts/: Cargo.toml
contracts/merkle_whitelist/: Cargo.toml
contracts/merkle_whitelist/src/: lib.rs  test.rs
contracts/multisig_escrow/: Cargo.toml
contracts/multisig_escrow/src/: lib.rs  test.rs
contracts/reentrancy_guard/: Cargo.toml
contracts/reentrancy_guard/src/: lib.rs  test.rs
contracts/reference/: Cargo.toml  README.md  ai-spec.json
contracts/reference/src/: lib.rs  test.rs
contracts/reference/test_snapshots/test/: test_init_and_increment.1.json  test_set_and_get_profile.1.json  test_set_profile_invalid_age.1.json
contracts/reference/test_snapshots/tests/: test_allowance_independent_per_spender.1.json  test_allowance_returns_zero_after_expiry.1.json  test_allowance_returns_zero_for_unknown_pair.1.json  test_approve_emits_correct_event_data.1.json  test_approve_emits_event.1.json  test_approve_overwrites_previous_allowance.1.json  test_approve_past_expiry_panics.1.json  test_approve_sets_allowance.1.json  test_approve_zero_revokes_allowance.1.json  test_burn_emits_event.1.json  (+32 more)
contracts/sample_contract/src/: events.rs  lib.rs
contracts/sep41-token/: Cargo.toml
contracts/sep41-token/src/: lib.rs  test.rs
(+225 files in other folders)
